--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -8,7 +8,7 @@
             <% if(!userName){ %>
             <li><a href="/user/signin">Sign In</a></li>
             <%} else {%>
-            <li><a href="/user/signout">Sign Out</a></li>
+            <li><a href="/user/signin">Sign Out</a></li>
             <%}%>
             <li><a href="#"><%= userName%></a></li>
         </ul>
